--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
@@ -135,8 +135,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.8</source> <!-- PRODUCAO -->
-					<target>1.8</target> <!-- TESTE -->
+					<source>1.7</source> <!-- PRODUCAO -->
+					<target>1.7</target> <!-- TESTE -->
 				</configuration>
 			</plugin>
 			<plugin>
